chore(issue): deprecated API #529